chore: change project name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_experience_medical_laboratory_core
+name: health_center_core
 description: "A new Flutter package project."
 version: 0.0.1
 homepage: "http://example.com"
